feat: add navbar and responsive menu
modified the global styles and added the main colors of the project in tailwind.config.js added the
react icons package for global use

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +9,13 @@
 }
 
 body {
-  background-color: #333;
+  background: linear-gradient(
+    252.57deg,
+    #262a32 -7.43%,
+    #414164 -5.91%,
+    rgba(38, 42, 50, 0.93) 7.7%,
+    #414164 98.46%
+  );
 }
 
 a {
